force-app/zurich-base/main/default/objects/SurveyResponse__c/SurveyResponse__c.object-meta.xml
<CustomObject>
    <description>OCS - Respuestas a las preguntas de una Survey hecha en Genesys Cloud (WS)</description>
    <label>Survey Response</label>
    <nameField>
        <displayFormat>SR-{0000}</displayFormat>
        <label>Survey Response Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Survey Responses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>