force-app/zurich-base/main/default/objects/SurveyResponse__c/fields/Answer__c.field-meta.xml
<CustomField>
    <fullName>Answer__c</fullName>
    <description>En el WS se rellenará Answer y LongAnswer y se truncarán</description>
    <label>Answer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>