force-app/zurich-base/main/default/objects/SurveyResponse__c/fields/LongAnswer__c.field-meta.xml
<CustomField>
    <fullName>LongAnswer__c</fullName>
    <description>En el WS se rellenará Answer y LongAnswer y se truncarán</description>
    <label>Long Answer</label>
    <length>131000</length>
    <type>LongTextArea</type>
</CustomField>