force-app/zurich-base/main/default/objects/SurveyResponse__c/fields/QuestionId__c.field-meta.xml
<CustomField>
    <fullName>QuestionId__c</fullName>
    <description>(Concatenación de interactionId+-+questionPosition VIENE YA CONCATENADO) xxxxxxx-yy</description>
    <externalId>true</externalId>
    <label>Question Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>