force-app/zurich-base/main/default/objects/SurveyResponse__c/fields/QuestionType__c.field-meta.xml
<CustomField>
    <fullName>QuestionType__c</fullName>
    <description>marcación o NLU bot</description>
    <label>Question Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ivr</fullName>
            </value>
            <value>
                <fullName>asr</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>