force-app/zurich-base/main/default/objects/SurveyResponse__c/fields/SurveyId__c.field-meta.xml
<CustomField>
    <fullName>SurveyId__c</fullName>
    <description>Encuesta padre hecha en Genesys Cloud (WS)</description>
    <label>Survey</label>
    <referenceTo>Survey__c</referenceTo>
    <relationshipLabel>Survey Responses</relationshipLabel>
    <relationshipName>SurveyResponses</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>